# zwallet

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  README.md  example.db  pyproject.toml  start-local.sh  tox.ini
.github/workflows/: lint.yml  test.yml
tests/: __init__.py  conftest.py  test_api.py  test_dependencies.py  test_jwt.py
tests/auth/: test_api.py
tests/wallets/: conftest.py  test_api.py  test_hdwallet.py  test_wallets.py
zwallet/: api.py  dependencies.py  jwt.py  settings.py
zwallet/auth/: models.py  router.py
zwallet/wallets/: hdwallet.py  models.py  router.py  wallets.py
