[tool.poetry]
name = "zwallet"
version = "0.1.0"
description = "zwallet"
authors = ["Nuno Costa <91nunocosta@gmail.com>"]
readme = "README.md"
repository = "https://github.com/91nunocosta/zwallet/"
[tool.poetry.dependencies]
python = ">=3.8,<4.0"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
sqlmodel = "^0.0.8"
hdwallet = "^2.2.1"
pydantic = "^1.10.7"
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
pre-commit = "^2.15.0"
mypy = "^1.0.0"
pylint = "^2.16.1"
types-python-jose = "^3.3.4.7"
passlib = "^1.7.4"
types-passlib = "^1.7.7.12"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
pytest-cov = "^3.0.0"
httpx = "^0.24.0"
coinaddrng = "^1.0.30"
pytest-deadfixtures = "^2.2.1"


[tool.poetry.group.tox.dependencies]
tox = "^4.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint]
max-line-length = 88
disable = "missing-module-docstring,missing-class-docstring,missing-function-docstring"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"


[tool.pylint.SIMILARITIES]
min-similarity-lines=3
